cmake_minimum_required(VERSION 3.17)
project(fundaments)

set(CMAKE_CXX_STANDARD 20)

add_executable(hello hello.cpp)
add_executable(variables variables.cpp)
add_executable(namespace namespace.cpp)
add_executable(io io.cpp)
add_executable(primitive primitive.cpp)
add_executable(string string.cpp)
add_executable(inference inference.cpp)
add_executable(arithmetic arithmetic.cpp)
add_executable(assignment assignment.cpp)
add_executable(relational relational.cpp)
add_executable(logical logical.cpp)
add_executable(unary unary.cpp)
add_executable(ternary ternary.cpp)
add_executable(if if.cpp)
add_executable(if_else if_else.cpp)
add_executable(if_else_if if_else_if.cpp)
add_executable(while while.cpp)
add_executable(for for.cpp)
add_executable(do_while do_while.cpp)
add_executable(switch switch.cpp)